--- a/kotlin-spring-boot-stomp-server/pom.xml
+++ b/kotlin-spring-boot-stomp-server/pom.xml
@@ -20,32 +20,15 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
-        </dependency>
+        <dependency> <artifactId>spring-boot-starter-web</artifactId>       <groupId>org.springframework.boot</groupId> </dependency>
+        <dependency> <artifactId>spring-boot-starter-websocket</artifactId> <groupId>org.springframework.boot</groupId></dependency>
+        <dependency> <artifactId>spring-messaging</artifactId>              <groupId>org.springframework</groupId> </dependency>
+        <dependency> <artifactId>spring-boot-starter-security</artifactId>  <groupId>org.springframework.boot</groupId> </dependency>
+        <dependency> <artifactId>spring-security-messaging</artifactId>     <groupId>org.springframework.security</groupId> </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-messaging</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-kotlin</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-        </dependency>
+        <dependency> <artifactId>jackson-module-kotlin</artifactId> <groupId>com.fasterxml.jackson.module</groupId></dependency>
+        <dependency> <artifactId>kotlin-reflect</artifactId>     <groupId>org.jetbrains.kotlin</groupId> </dependency>
+        <dependency> <artifactId>kotlin-stdlib-jdk8</artifactId> <groupId>org.jetbrains.kotlin</groupId></dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
